Add chart to chart page

--- a/app/index.html
+++ b/app/index.html
@@ -5,13 +5,17 @@
   <title>Positive Guage </title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
-  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular.min.js"></script>
-  <script src="index.js"></script>
-  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular-route.min.js"></script>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.3/angular.min.js"></script>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.3/angular-route.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/1.1.1/Chart.min.js"></script>
   <script src="bower_components/angular-chart.js/dist/angular-chart.js"></script>
   <link rel="stylesheet" href="bower_components/angular-chart.js/dist/angular-chart.css">
+  <script src="index.js"></script>
+  <script src="chart.js"></script>
 </head>
 <body>
+
+<div></div>
 
 <nav class="navbar navbar-inverse">
   <div class="container-fluid">
@@ -31,9 +35,6 @@
       <ul class="nav navbar-nav">
         <li class="active"><a href="/#/chart">Chart <span class="sr-only">(current)</span></a></li>
         <li><a href="#">Link</a></li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-        </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#">Logout</a></li>
