--- a/app/index.html
+++ b/app/index.html
@@ -9,6 +9,7 @@
   <script src="index.js"></script>
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular-route.min.js"></script>
   <script src="bower_components/angular-chart.js/dist/angular-chart.js"></script>
+  <script type="text/javascript" src='audio.js'></script>
   <link rel="stylesheet" href="bower_components/angular-chart.js/dist/angular-chart.css">
 </head>
 <body>
