--- a/app/index.html
+++ b/app/index.html
@@ -11,6 +11,8 @@
   <script src="bower_components/angular-chart.js/dist/angular-chart.js"></script>
   <script type="text/javascript" src='audio.js'></script>
   <link rel="stylesheet" href="bower_components/angular-chart.js/dist/angular-chart.css">
+  <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
+  <!-- <script src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script> -->
   <script src="index.js"></script>
   <script src="chart.js"></script>
 </head>
@@ -35,7 +37,7 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li class="active"><a href="/#/chart">Chart <span class="sr-only">(current)</span></a></li>
-        <li><a href="#">Link</a></li>
+        <li><a href="">Link</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#">Logout</a></li>
