chart legend css fix

--- a/app/index.html
+++ b/app/index.html
@@ -12,6 +12,7 @@
   <link rel="stylesheet" href="bower_components/angular-chart.js/dist/angular-chart.css">
   <script src="index.js"></script>
   <script src="chart.js"></script>
+  <link rel="stylesheet" href="index.css">
 </head>
 <body>
 
