--- a/app/index.html
+++ b/app/index.html
@@ -14,6 +14,8 @@
   <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
   <!-- <script src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script> -->
   <script src="index.js"></script>
+
+  <link rel="stylesheet" href="style.css">
   <script src="chart.js"></script>
 </head>
 <body>
