format parsed text to fit to screen

--- a/app/index.html
+++ b/app/index.html
@@ -15,7 +15,6 @@
   <!-- <script src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script> -->
   <script src="index.js"></script>
 
-  <link rel="stylesheet" href="style.css">
   <script src="chart.js"></script>
   <script type="text/javascript" src="hodapi.js"></script>
   <link rel="stylesheet" href="index.css">
@@ -41,7 +40,7 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li class="active"><a href="/#/chart">Chart <span class="sr-only">(current)</span></a></li>
-        <li><a href="">Link</a></li>
+        <li><a href="#">History</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#">Logout</a></li>
@@ -51,7 +50,7 @@
   </div><!-- /.container-fluid -->
 </nav>
 
-    <div ng-view>
+    <div class='container' ng-view>
 
 
     </div>
