--- a/app/index.html
+++ b/app/index.html
@@ -11,9 +11,12 @@
   <script src="bower_components/angular-chart.js/dist/angular-chart.js"></script>
   <script type="text/javascript" src='audio.js'></script>
   <link rel="stylesheet" href="bower_components/angular-chart.js/dist/angular-chart.css">
+  <script src="bower_components/ng-file-upload/ng-file-upload.min.js"></script>
+  <script src="bower_components/ng-file-upload/ng-file-upload-shim.min.js"></script>
   <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
   <script src="index.js"></script>
-
+  <script src="audio.js"></script>
+  <script src="audioUpload.js"></script>
   <script src="chart.js"></script>
   <script type="text/javascript" src="hodapi.js"></script>
   <link rel="stylesheet" href="index.css">
