--- a/app/index.html
+++ b/app/index.html
@@ -22,6 +22,8 @@
 
 <div></div>
 
+<img class="home-page" src="https://pixabay.com/static/uploads/photo/2015/12/03/09/33/microphone-1074362_960_720.jpg">
+
 <nav class="navbar navbar-inverse">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
@@ -51,7 +53,6 @@
 
 
     <div class='container' ng-view>
-
 
     </div>
 
