Background image for home page

--- a/app/index.html
+++ b/app/index.html
@@ -22,7 +22,6 @@
 
 <div></div>
 
-<img class="home-page" src="https://pixabay.com/static/uploads/photo/2015/12/03/09/33/microphone-1074362_960_720.jpg">
 
 <nav class="navbar navbar-inverse">
   <div class="container-fluid">
@@ -52,8 +51,7 @@
 </nav>
 
 
-    <div class='container' ng-view>
-
+    <div ng-view>
     </div>
 
 
