--- a/app/index.html
+++ b/app/index.html
@@ -9,13 +9,10 @@
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.3/angular-route.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/1.1.1/Chart.min.js"></script>
   <script src="bower_components/angular-chart.js/dist/angular-chart.js"></script>
-  <script type="text/javascript" src='audio.js'></script>
   <link rel="stylesheet" href="bower_components/angular-chart.js/dist/angular-chart.css">
   <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
   <script src="index.js"></script>
-
   <script src="chart.js"></script>
-  <script type="text/javascript" src="hodapi.js"></script>
   <link rel="stylesheet" href="index.css">
 </head>
 <body>
@@ -50,11 +47,7 @@
   </div>
 </nav>
 
-
-    <div ng-view>
-    </div>
-
-
+  <div ng-view></div>
 
 </body>
 </html>
