--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,7 @@
 <html lang="en" ng-app="4564">
 <head>
   <meta charset="utf-8">
-  <title>Positive Gauge </title>
+  <title>Word Clip</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.3/angular.min.js"></script>
@@ -13,6 +13,7 @@
   <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
   <script src="index.js"></script>
   <script src="chart.js"></script>
+  <script src="spin.js"></script>
   <link rel="stylesheet" href="index.css">
 </head>
 <body>
@@ -30,7 +31,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#/">Brand</a>
+      <a class="navbar-brand" href="#/">Word Clip</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
