Update page to have sample code

--- a/app/index.html
+++ b/app/index.html
@@ -17,6 +17,7 @@
   <script src="audio.js"></script>
   <script src="audioUpload.js"></script>
   <script src="chart.js"></script>
+  <script src="sample.js"></script>
   <script src="spin.js"></script>
   <link rel="stylesheet" href="index.css">
 </head>
@@ -41,13 +42,11 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li><a href="/#/chart">Chart <span class="sr-only">(current)</span></a></li>
-        <li><a href="#">History</a></li>
+        <li><a href="/#/chart">Try it out<span class="sr-only">(current)</span></a></li>
+        <li><a href="/#/sample">Sample <span class="sr-only">(current)</span></a></li>
+
       </ul>
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Logout</a></li>
-        </li>
-      </ul>
+
     </div>
   </div>
 </nav>
